# opa-quotes-streamer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  VALIDATION_GUIDE.md  create_test_config.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run_validation.py  run_validation_test.py
.github/skills/git-linear-workflow/: SKILL.md
.github/skills/linear-mcp-tool/: SKILL.md
.github/skills/run-efficiency/: SKILL.md
.github/workflows/: ci.yml
config/: streaming-300.yaml  streaming.yaml
docs/: ECOSYSTEM_CONTEXT.md  benchmark-300-tickers-report.md
reports/: benchmark-quick-test.json  benchmark-quick-test.md
scripts/: benchmark_streaming.py
scripts/git/: check_sync.ps1  check_sync.sh
src/opa_quotes_streamer/: __init__.py  config.py  logging_setup.py  main.py  metrics.py
src/opa_quotes_streamer/models/: __init__.py  quote.py
src/opa_quotes_streamer/publishers/: __init__.py  base.py  redis_publisher.py  storage_publisher.py
src/opa_quotes_streamer/sources/: __init__.py  base.py  yfinance_source.py
src/opa_quotes_streamer/utils/: __init__.py  circuit_breaker.py  rate_limiter.py
tests/: conftest.py
tests/fixtures/: mockserver.json  prometheus.yml
tests/unit/: test_circuit_breaker.py  test_main_resilience.py  test_metrics.py  test_quote_validation.py  test_rate_limiter.py  test_redis_publisher.py  test_storage_publisher.py  test_yfinance_source.py
